[Update] - publish to Jitpack - Migrate to API 28
Signed-off-by: rosuh <rosuh@qq.com>

--- a/parallaxbacklayout/build.gradle
+++ b/parallaxbacklayout/build.gradle
@@ -1,51 +1,41 @@
 apply plugin: 'com.android.library'
 
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'com.github.anzewei'
+apply plugin: 'com.github.dcendents.android-maven'
 
-    publishedGroupId = 'com.github.anzewei'
-    libraryName = 'parallaxbacklayout'
-    artifact = 'parallaxbacklayout'
-
-    libraryDescription = 'An Android library that help you to finish activity with swipe back gesture and you can get parallax scrolling effect'
-
-    siteUrl = 'https://github.com/anzewei/ParallaxBackLayout'
-    gitUrl = 'https://github.com/anzewei/ParallaxBackLayout.git'
-
-    libraryVersion = '1.1.8'
-
-    developerId = 'anzewei'
-    developerName = 'An Zewei'
-    developerEmail = 'anzewei88@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
+group='com.github.rosuH'
 
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 22
-        versionCode 6
-        versionName libraryVersion
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
+ext.supportLibVersion = '28.0.0'
+
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:22.1.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
